Almost there to finish

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img src="images/person/person-4.png" alt="This is the picture of person-4">
             </div>
         </section>
-        <section>
+        <section class="second-section-margin">
             <div>
                 <h1 class="mission-22">My Mission in <span class="year-2022-color">2022</span></h1>
             </div>
@@ -86,7 +86,7 @@
                 <img src="images/pictures/project.png" alt="This is the picture of person-4">
             </div>
         </section>
-        <section>
+        <section class="second-section-margin">
             <h1 class="mission-22 my-mission-color">My Projects</h1>
             <div class="my-projects-area ">
                 <div class="mission-are-box-shadow">
@@ -121,7 +121,7 @@
     </div>
     <footer class="footer-design">
         <h1>Mission <span class="red-color">2022</span></h1>
-        <p>Focus, Consistensy and Hunger 2022</p>
+        <p>Focus, Consistensy and Hunger for 2022</p>
     </footer>
 
 </body>
