--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <h1 class="my-mission-color">Mission 2022</h1>
                 </div>
                 <p>I have a mission in 2022. That mission is to be a professional Web Developer. I have already started
-                    my
-                    mission with Programming Hero. To be successful is this mission I really need to work hard
-                    regularly.
-                    This is the most challenging part of my mission.</p>
+                    my mission with Programming Hero. To be successful is this mission I really need to work hard
+                    regularly. This is the most challenging part of my mission. But no challenge should not stop me, as
+                    i am in a mission with a big dream. I always need to be focused in my mission to achieve something
+                    greater.</p>
                 <a class="link-button" href="https://github.com/Farhad32155">About Me</a>
                 <p>Keep going down to know more about me.</p>
             </div>
@@ -48,29 +48,33 @@
                 <div class="mission-are-box-shadow box-2">
                     <img src="images/illustrators/illustrator-2.png" alt="This is illustrators-1">
                     <h2>Vission</h2>
-                    <p>My mission is to become a professional Web Develpoer in 2022. I want to develop precise modern
-                        website. My aim is to gain good knowledge of front-end and back-end in terms of Web Develpong.
+                    <p>My vission is to work in international software companies. Working with cross cultural talented
+                        programmers will be amazing. By working in big companies I will have the chance to achieve more
+                        knowledge and experience from the industry.
                     </p>
                 </div>
                 <div class="mission-are-box-shadow box-3">
                     <img src="images/illustrators/illustrator-3.png" alt="This is illustrators-1">
                     <h2>Goals</h2>
-                    <p>My mission is to become a professional Web Develpoer in 2022. I want to develop precise modern
-                        website. My aim is to gain good knowledge of front-end and back-end in terms of Web Develpong.
+                    <p>My first goal is to gain the fundemental skills of web developing. Then looking for a job or
+                        internship in a reputed company. Industry experience will be very helpful for me. It will be a
+                        huge learning platform for me.
                     </p>
                 </div>
             </div>
         </section>
         <section class="first-section-flexible">
             <div class="first-section-half-width">
-                <img src="images/pictures/coding.png" alt="This is coding picture">
+                <img src="images/pictures/coding-3.jpeg" alt="This is coding picture">
             </div>
             <div class="first-section-half-width">
                 <h1>Develop</h1>
                 <h1>Without Limits</h1>
-                <p>Fisrt thing is I have to learn the rechnology first. Then with time and practice thing will get
-                    easier.
-                    Then I can code up the product. It is an remarkable opportunity to build something graet.</p>
+                <p>Fisrt thing is I have to learn the technology first. Then with time and practice thing will get
+                    easier. Then I can code up the product. It is an remarkable opportunity to build something graet.
+                    Once the learning is done and skills are gained this could open the opportunities. Today or tomorrow
+                    if any call come up with the skills you can at least give a try. Firt step is always important to
+                    acieve something bigger.</p>
                 <a class="link-button" href="https://github.com/Farhad32155">Read My Papers</a>
             </div>
         </section>
@@ -79,7 +83,9 @@
                 <h1>Know my</h1>
                 <h1>International Achivements</h1>
                 <p>Over the year I have perticipated a bunch of Interntaional coding competetion. The outcome of some of
-                    those events were pleasing where I won prestigiase postion.</p>
+                    those events were pleasing where I won prestigiase postion. It was also an opportunity for me to
+                    represent my counyty in the international arena. It was such an key part of my life. It is always
+                    important to have achievement like this to keep yourself motivated.</p>
                 <a class="link-button" href="https://github.com/Farhad32155">Explore My Achievements</a>
             </div>
             <div class="first-section-half-width">
