--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
     <footer class="footer-design">
         <h1>Mission <span class="red-color">2022</span></h1>
-        <p>Focus, Consistensy and Hunger for 2022</p>
+        <p>Focus, Consistency and Hunger for 2022</p>
     </footer>
 
 </body>
