almost done finalize

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 </div>
                 <div class="mission-are-box-shadow box-2">
                     <img src="images/illustrators/illustrator-2.png" alt="This is illustrators-1">
-                    <h2>Vission</h2>
-                    <p>My vission is to work in international software companies. Working with cross cultural talented
+                    <h2>Vision</h2>
+                    <p>My vision is to work in international software companies. Working with cross cultural talented
                         programmers will be amazing. By working in big companies I will have the chance to achieve more
                         knowledge and experience from the industry.
                     </p>
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </section>
-        <section class="first-section-flexible">
+        <section class="first-section-flexible sec3-backimg">
             <div class="first-section-half-width">
                 <img src="images/pictures/coding-3.jpeg" alt="This is coding picture">
             </div>
@@ -78,10 +78,10 @@
                 <a class="link-button" href="https://github.com/Farhad32155">Read My Papers</a>
             </div>
         </section>
-        <section class="first-section-flexible">
+        <section class="first-section-flexible sec4-backimg">
             <div class="first-section-half-width">
                 <h1>Know my</h1>
-                <h1>International Achivements</h1>
+                <h1>International Achievements</h1>
                 <p>Over the year I have perticipated a bunch of Interntaional coding competetion. The outcome of some of
                     those events were pleasing where I won prestigiase postion. It was also an opportunity for me to
                     represent my counyty in the international arena. It was such an key part of my life. It is always
@@ -127,7 +127,7 @@
     </div>
     <footer class="footer-design">
         <h1>Mission <span class="red-color">2022</span></h1>
-        <p>Focus, Consistency and Hunger for 2022</p>
+        <p>@farhad-hossan|Mission P-Hero 2022</p>
     </footer>
 
 </body>
